--- a/index.css
+++ b/index.css
@@ -1,21 +1,24 @@
 .banner{
 width: 1005px;
 height: 650px;
-background: url(../imag.praia.01.jpg);
+background: url(img/imag.praia.01.jpg);
 background-size: 100;
 background-position-x:center ;
 background-repeat: no-repeat;
 }
 
 .margin{
-    margin-bottom: ;
+    margin-bottom: 0;
 }
-
-
-
-
 
 .paddin{
-    margin-top: 10px;
-    margin-bottom: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
+.praia{
+    width:100%;
+}
+.praia img{
+    width: 100%;
+}
+
